<resources>
    <string name="app_name">BournonvillesWildWest</string>
    <string name="action_settings">Settings</string>
    <string name="kontakt_Button_text">Kontakt</string>
    <string name="title_activity_contact_">Kontakt</string>
    <string name="Kontaktformular_Button_tekst">Kontaktformular</string>
    <string name="Find_button_Tekst">Find os</string>
    <string name="Ring_Button_Tekst">Ring til os</string>
    <string name="title_activity_more_on">Mere om Bounonville\'s</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="goToProductsBtn">Se produkter</string>
    <string name="title_activity_login__page">Login_Page</string>
    <string name="title_activity_register">Register</string>
    <string name="skriv_brugernavnHer">Skriv brugernavn her:</string>
    <string name="selfi_button">Selfi</string>
    <string name="mail_button">Send Mail</string>
</resources>
