<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_contact_"
    tools:context="com.lora.bournonvillesflow.Contact_Activity"
    android:background="@drawable/brevpapir">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        style="@style/BournonvilleButton"
        android:text="@string/Ring_Button_Tekst"
        android:id="@+id/ring_Button"
        android:layout_marginTop="350dp"
        android:layout_alignParentTop="true"
        android:onClick="OnClickRing"/>

    <Button
        style="@style/BournonvilleButton"
        android:text="@string/Find_button_Tekst"
        android:id="@+id/find_button"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/ring_Button"
        android:onClick="onClickFindUs"/>

    <Button
        style="@style/BournonvilleButton"
        android:text="@string/mail_button"
        android:id="@+id/mail_Button"
        android:layout_marginTop="48dp"

        android:layout_below="@+id/find_button"
        android:onClick="OnClickMail"
        android:layout_alignLeft="@+id/kontaktformular_Button"
        android:layout_alignStart="@+id/kontaktformular_Button" />

    <Button
        style="@style/BournonvilleButton"
        android:text="@string/Kontaktformular_Button_tekst"
        android:id="@+id/kontaktformular_Button"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/mail_Button"
        android:layout_centerHorizontal="true" />
    </RelativeLayout>

</ScrollView>
